Send local notifications

--- a/here clone/Info.plist
+++ b/here clone/Info.plist
@@ -26,6 +26,13 @@
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Leave a voice message HERE!</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>fetch</string>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
